Updated lecture feature part