@@ -22,12 +22,10 @@ public class LecturerPacketService {
     private final ExamPacketRepository examPacketRepository;
     private final PacketMovementRepository packetMovementRepository;
 
-
     /*
         View exam packets assigned to lecturer
     */
     public List<AssignedPacketResponseDTO> getAssignedPackets(String lecturerId) {
-
         List<PacketAssignment> assignments =
                 packetAssignmentRepository.findByUserUserId(lecturerId);
 
@@ -36,14 +34,12 @@ public class LecturerPacketService {
                 .collect(Collectors.toList());
     }
 
-
     /*
-        Convert Entity to DTO
+        Convert Assignment Entity to DTO
     */
     private AssignedPacketResponseDTO convertToDto(
             PacketAssignment assignment
     ) {
-
         ExamPacket packet = assignment.getPacket();
 
         if (packet == null) {
@@ -54,254 +50,126 @@ public class LecturerPacketService {
         }
 
         return AssignedPacketResponseDTO.builder()
-
-                .packetId(
-                        packet.getPacketId()
-                )
-
-                .courseCode(
-                        packet.getCourse()
-                                .getCourseCode()
-                )
-
-                .courseName(
-                        packet.getCourse()
-                                .getCourseName()
-                )
-
-                .departmentName(
-                        packet.getCourse()
-                                .getDepartment()
-                                .getDeptName()
-                )
-
-                .academicYear(
-                        packet.getAcademicCycle()
-                                .getYear()
-                )
-
-                .semester(
-                        packet.getAcademicCycle()
-                                .getSemester()
-                )
-
-                .deadline(
-                        packet.getDeadline()
-                )
-
-                .status(
-                        packet.getStatus()
-                )
-
-                .currentHolderName(
-                        packet.getCurrentHolder()
-                                .getName()
-                )
-
-                .taskType(
-                        assignment.getTaskType()
-                )
-
+                .packetId(packet.getPacketId())
+                .courseCode(packet.getCourse().getCourseCode())
+                .courseName(packet.getCourse().getCourseName())
+                .departmentName(packet.getCourse().getDepartment().getDeptName())
+                .academicYear(packet.getAcademicCycle().getYear())
+                .semester(packet.getAcademicCycle().getSemester())
+                .deadline(packet.getDeadline())
+                .status(packet.getStatus())
+                .currentHolderName(packet.getCurrentHolder().getName())
+                .taskType(assignment.getTaskType())
                 .build();
     }
 
-
+    /*
+        Get specific packet details by ID
+    */
     public PacketDetailsResponseDTO getPacketDetails(String packetId) {
-
         ExamPacket packet =
                 examPacketRepository.findByPacketId(packetId)
-                        .orElseThrow(() ->
-                                new RuntimeException("Packet not found"));
+                        .orElseThrow(() -> new RuntimeException("Packet not found"));
 
         return PacketDetailsResponseDTO.builder()
-
                 .packetId(packet.getPacketId())
-
-                .courseCode(
-                        packet.getCourse().getCourseCode()
-                )
-
-                .courseName(
-                        packet.getCourse().getCourseName()
-                )
-
-                .departmentName(
-                        packet.getCourse()
-                                .getDepartment()
-                                .getDeptName()
-                )
-
-                .academicYear(
-                        packet.getAcademicCycle().getYear()
-                )
-
-                .semester(
-                        packet.getAcademicCycle().getSemester()
-                )
-
-                .deadline(
-                        packet.getDeadline()
-                )
-
-                .status(
-                        packet.getStatus()
-                )
-
-                .currentHolderName(
-                        packet.getCurrentHolder().getName()
-                )
-
+                .courseCode(packet.getCourse().getCourseCode())
+                .courseName(packet.getCourse().getCourseName())
+                .departmentName(packet.getCourse().getDepartment().getDeptName())
+                .academicYear(packet.getAcademicCycle().getYear())
+                .semester(packet.getAcademicCycle().getSemester())
+                .deadline(packet.getDeadline())
+                .status(packet.getStatus())
+                .currentHolderName(packet.getCurrentHolder().getName())
                 .build();
     }
-
 
     /*
         Access previous academic packet records
     */
     public List<PreviousPacketResponseDTO> getPreviousPackets() {
-
         List<ExamPacket> packets =
-                examPacketRepository
-                        .findByAcademicCycleStatus("Completed");
+                examPacketRepository.findByAcademicCycleStatus("Completed");
 
         return packets.stream()
                 .map(this::convertPreviousPacketToDTO)
                 .collect(Collectors.toList());
     }
 
-
     private PreviousPacketResponseDTO convertPreviousPacketToDTO(
             ExamPacket packet
     ) {
-
         return PreviousPacketResponseDTO.builder()
-
-                .packetId(
-                        packet.getPacketId()
-                )
-
-                .courseCode(
-                        packet.getCourse()
-                                .getCourseCode()
-                )
-
-                .courseName(
-                        packet.getCourse()
-                                .getCourseName()
-                )
-
-                .departmentName(
-                        packet.getCourse()
-                                .getDepartment()
-                                .getDeptName()
-                )
-
-                .academicYear(
-                        packet.getAcademicCycle()
-                                .getYear()
-                )
-
-                .semester(
-                        packet.getAcademicCycle()
-                                .getSemester()
-                )
-
-                .status(
-                        packet.getStatus()
-                )
-
-                .deadline(
-                        packet.getDeadline()
-                )
-
-                .currentHolderName(
-                        packet.getCurrentHolder()
-                                .getName()
-                )
-
+                .packetId(packet.getPacketId())
+                .courseCode(packet.getCourse().getCourseCode())
+                .courseName(packet.getCourse().getCourseName())
+                .departmentName(packet.getCourse().getDepartment().getDeptName())
+                .academicYear(packet.getAcademicCycle().getYear())
+                .semester(packet.getAcademicCycle().getSemester())
+                .status(packet.getStatus())
+                .deadline(packet.getDeadline())
+                .currentHolderName(packet.getCurrentHolder().getName())
                 .build();
     }
 
-
-    public List<PacketMovementResponseDTO> getPacketMovementHistory(
-            String packetId
-    ) {
-
+    /*
+        Get Packet Movement & Workflow History
+    */
+    public List<PacketMovementResponseDTO> getPacketMovementHistory(String packetId) {
         List<PacketMovement> movements =
                 packetMovementRepository
-                        .findByPacketPacketId(packetId);
+                        .findByPacketPacketIdOrderByTimestampAsc(packetId);
 
         return movements.stream()
                 .map(this::convertMovementToDTO)
                 .collect(Collectors.toList());
     }
 
+    /**
+     * Helper method to map PacketMovement entity to PacketMovementResponseDTO,
+     * safely extracting names from `fromUser` and `toUser` relationships to prevent NullPointerExceptions.
+     */
+    private PacketMovementResponseDTO convertMovementToDTO(PacketMovement movement) {
+        String fromUserName = (movement.getFromUser() != null)
+                ? movement.getFromUser().getName()
+                : "System / Exam Branch";
 
-    private PacketMovementResponseDTO convertMovementToDTO(
-            PacketMovement movement
-    ) {
+        String toUserName = (movement.getToUser() != null)
+                ? movement.getToUser().getName()
+                : "N/A";
 
         return PacketMovementResponseDTO.builder()
-
-                .movementId(
-                        movement.getMovementId()
-                )
-
-                .fromUser(
-                        movement.getFromUser()
-                                .getName()
-                )
-
-                .toUser(
-                        movement.getToUser()
-                                .getName()
-                )
-
-                .action(
-                        movement.getAction()
-                )
-
-                .timestamp(
-                        movement.getTimestamp()
-                )
-
+                .movementId(movement.getMovementId())
+                .fromUser(fromUserName)
+                .toUser(toUserName)
+                .action(movement.getAction())
+                .timestamp(movement.getTimestamp())
                 .build();
     }
 
-
+    /*
+        Search Packets by keyword
+    */
     public List<ExamPacketResponseDTO> searchPackets(String keyword) {
-
         List<ExamPacket> packets =
                 examPacketRepository.searchPackets(keyword);
 
         return packets.stream()
                 .map(packet -> ExamPacketResponseDTO.builder()
-
-                        .packetId(
-                                packet.getPacketId()
-                        )
-
-                        .courseCode(
-                                packet.getCourse().getCourseCode()
-                        )
-
-                        .courseName(
-                                packet.getCourse().getCourseName()
-                        )
-
-                        .status(
-                                packet.getStatus()
-                        )
-
+                        .packetId(packet.getPacketId())
+                        .courseCode(packet.getCourse().getCourseCode())
+                        .courseName(packet.getCourse().getCourseName())
+                        .status(packet.getStatus())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 
-
+    /*
+        Get assigned packet count for lecturer
+    */
     public LecturerPacketCountResponseDTO getAssignedPacketCount(
             String lecturerId
     ) {
-
         long count =
                 packetAssignmentRepository
                         .countByUserUserId(lecturerId);
